--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -19,7 +18,17 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ng-g6/*": [
+        "projects/ng-g6/ng-g6",
+        "projects/ng-g6"
+      ],
+      "ng-g6": [
+        "dist/ng-g6/ng-g6",
+        "dist/ng-g6"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
