--- a/projects/g6/package.json
+++ b/projects/g6/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "ng-g6",
+  "name": "ng-antv-g6",
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^10.0.14",
-    "@angular/core": "^10.0.14"
+    "@angular/core": "^10.0.14",
+    "@antv/g6": "^3.7.3"
   },
   "dependencies": {
-    "tslib": "^2.0.0",
-    "@antv/g6": "^3.7.3"
+    "tslib": "^2.0.0"
   }
 }
