--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
   "files": [],
   "references": [
     {
-      "path": "./projects/ng-g6/tsconfig.lib.json"
+      "path": "./projects/g6/tsconfig.lib.json"
     },
     {
-      "path": "./projects/ng-g6/tsconfig.spec.json"
+      "path": "./projects/g6/tsconfig.spec.json"
     },
     {
       "path": "./projects/editor/tsconfig.app.json"
