--- a/angular.json
+++ b/angular.json
@@ -71,9 +71,15 @@
               "projects/editor/src/assets"
             ],
             "styles": [
-              "projects/editor/src/styles.scss"
+              "projects/editor/src/styles.scss",
+              "projects/editor/src/assets/theme/material.dark.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/marked/lib/marked.js",
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-typescript.min.js",
+              "node_modules/prismjs/components/prism-css.min.js"
+            ]
           },
           "configurations": {
             "production": {
