angular/core angular/cli 11

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "g6",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/g6/tsconfig.lib.json",
             "project": "projects/g6/ng-package.json"
@@ -92,7 +92,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
