--- a/angular.json
+++ b/angular.json
@@ -65,7 +65,6 @@
             "main": "projects/editor/src/main.ts",
             "polyfills": "projects/editor/src/polyfills.ts",
             "tsConfig": "projects/editor/tsconfig.app.json",
-            "aot": true,
             "assets": [
               "projects/editor/src/favicon.ico",
               "projects/editor/src/assets"
@@ -79,7 +78,13 @@
               "node_modules/prismjs/prism.js",
               "node_modules/prismjs/components/prism-typescript.min.js",
               "node_modules/prismjs/components/prism-css.min.js"
-            ]
+            ],
+            "vendorChunk": true,
+            "extractLicenses": false,
+            "buildOptimizer": false,
+            "sourceMap": true,
+            "optimization": false,
+            "namedChunks": true
           },
           "configurations": {
             "production": {
@@ -109,7 +114,8 @@
                 }
               ]
             }
-          }
+          },
+          "defaultConfiguration": ""
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
