--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,7 @@
               "projects/editor/src/assets/theme/material.dark.css"
             ],
             "scripts": [
-              "node_modules/marked/lib/marked.js",
+              "node_modules/marked/marked.min.js",
               "node_modules/prismjs/prism.js",
               "node_modules/prismjs/components/prism-typescript.min.js",
               "node_modules/prismjs/components/prism-css.min.js"
