--- a/projects/g6/package.json
+++ b/projects/g6/package.json
@@ -2,9 +2,9 @@
   "name": "ng-antv-g6",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^10.0.14",
-    "@angular/core": "^10.0.14",
-    "@antv/g6": "^3.7.3"
+    "@angular/common": ">12",
+    "@angular/core": ">12",
+    "@antv/g6": ">3.7.3"
   },
   "dependencies": {
     "tslib": "^2.0.0"
