--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "skipLibCheck": true,
     "target": "es2020",
     "module": "es2020",
     "lib": [
