--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build g6",
+    "publish": "cd dist/g6 && npm publish",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
